[UPDATE] remote file paths

--- a/notebooks/prices_eda.ipynb
+++ b/notebooks/prices_eda.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "daf8cc9e-efaf-4331-8769-afae2bf1cbca",
    "metadata": {},
    "outputs": [],
@@ -21,20 +21,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "7679edd5-e462-499b-8c59-82a8e959d93f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     /Users/felipegonzalez/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -43,24 +33,9 @@
     "sns.set_palette('colorblind')\n",
     "from app.conf import settings as sts\n",
     "from app.conf import utils as uts\n",
-    "from unidecode import unidecode\n",
-    "import nltk\n",
-    "nltk.download('punkt')\n",
-    "from nltk.tokenize import word_tokenize\n",
     "import re\n",
-    "import string\n",
-    "from statsmodels.tsa.deterministic import DeterministicProcess, CalendarFourier\n",
-    "from statsmodels.tsa.seasonal import seasonal_decompose, STL\n",
-    "from sklearn.linear_model import LinearRegression"
+    "import string"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "58dd8a96-e9d1-423c-9e64-3603e1675ab6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -72,27 +47,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "93c70496-0b26-4b78-8f6a-31839829c837",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = uts.load_artifact('prices_dataframe', sts.LOCAL_ARTIFACTS_PATH)"
+    "dataset_filepath = sorted([file for file in os.listdir(\"data/\") if file.endswith(\".parquet\")], reverse = True)[0]\n",
+    "dataset = pd.read_parquet(\"data/\"+dataset_filepath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "4701ade1-0f52-42b1-9f5c-94853b0ca2f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "ec4eba72-bacb-4bc4-a129-9228b91ef362",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(554550, 5)"
+       "(291896, 5)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "fbd2f2f2-18d8-495f-825d-4a41abb32c46",
    "metadata": {},
    "outputs": [
@@ -138,65 +122,65 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2015-01-01 00:00:00</td>\n",
-       "      <td>CARNES</td>\n",
-       "      <td>Alas de pollo con costillar</td>\n",
-       "      <td>Armenia, Mercar</td>\n",
-       "      <td>3800</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>carnes</td>\n",
+       "      <td>alas de pollo con costillar</td>\n",
+       "      <td>barranquilla barranquillita</td>\n",
+       "      <td>3073.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2015-02-01 00:00:00</td>\n",
-       "      <td>CARNES</td>\n",
-       "      <td>Alas de pollo con costillar</td>\n",
-       "      <td>Armenia, Mercar</td>\n",
-       "      <td>3800</td>\n",
+       "      <td>2013-02-01</td>\n",
+       "      <td>carnes</td>\n",
+       "      <td>alas de pollo con costillar</td>\n",
+       "      <td>barranquilla barranquillita</td>\n",
+       "      <td>3063.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2015-03-01 00:00:00</td>\n",
-       "      <td>CARNES</td>\n",
-       "      <td>Alas de pollo con costillar</td>\n",
-       "      <td>Armenia, Mercar</td>\n",
-       "      <td>3850</td>\n",
+       "      <td>2013-03-01</td>\n",
+       "      <td>carnes</td>\n",
+       "      <td>alas de pollo con costillar</td>\n",
+       "      <td>barranquilla barranquillita</td>\n",
+       "      <td>2913.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2015-04-01 00:00:00</td>\n",
-       "      <td>CARNES</td>\n",
-       "      <td>Alas de pollo con costillar</td>\n",
-       "      <td>Armenia, Mercar</td>\n",
-       "      <td>3900</td>\n",
+       "      <td>2013-04-01</td>\n",
+       "      <td>carnes</td>\n",
+       "      <td>alas de pollo con costillar</td>\n",
+       "      <td>barranquilla barranquillita</td>\n",
+       "      <td>2894.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2015-05-01 00:00:00</td>\n",
-       "      <td>CARNES</td>\n",
-       "      <td>Alas de pollo con costillar</td>\n",
-       "      <td>Armenia, Mercar</td>\n",
-       "      <td>3900</td>\n",
+       "      <td>2013-05-01</td>\n",
+       "      <td>carnes</td>\n",
+       "      <td>alas de pollo con costillar</td>\n",
+       "      <td>barranquilla barranquillita</td>\n",
+       "      <td>3040.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  date   group                      product           market  \\\n",
-       "0  2015-01-01 00:00:00  CARNES  Alas de pollo con costillar  Armenia, Mercar   \n",
-       "1  2015-02-01 00:00:00  CARNES  Alas de pollo con costillar  Armenia, Mercar   \n",
-       "2  2015-03-01 00:00:00  CARNES  Alas de pollo con costillar  Armenia, Mercar   \n",
-       "3  2015-04-01 00:00:00  CARNES  Alas de pollo con costillar  Armenia, Mercar   \n",
-       "4  2015-05-01 00:00:00  CARNES  Alas de pollo con costillar  Armenia, Mercar   \n",
+       "        date   group                      product  \\\n",
+       "0 2013-01-01  carnes  alas de pollo con costillar   \n",
+       "1 2013-02-01  carnes  alas de pollo con costillar   \n",
+       "2 2013-03-01  carnes  alas de pollo con costillar   \n",
+       "3 2013-04-01  carnes  alas de pollo con costillar   \n",
+       "4 2013-05-01  carnes  alas de pollo con costillar   \n",
        "\n",
-       "  mean_price  \n",
-       "0       3800  \n",
-       "1       3800  \n",
-       "2       3850  \n",
-       "3       3900  \n",
-       "4       3900  "
+       "                        market  mean_price  \n",
+       "0  barranquilla barranquillita      3073.0  \n",
+       "1  barranquilla barranquillita      3063.0  \n",
+       "2  barranquilla barranquillita      2913.0  \n",
+       "3  barranquilla barranquillita      2894.0  \n",
+       "4  barranquilla barranquillita      3040.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "cf72cac6-630a-4106-836d-9bb2611f06d4",
    "metadata": {},
    "outputs": [],
@@ -225,30 +209,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "8bbdfbd8-d884-4489-bf41-df0380b319c3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count                           554550\n",
-       "mean     2017-11-23 10:41:51.761969408\n",
+       "count                           291896\n",
+       "mean     2018-02-14 20:07:44.516128768\n",
        "min                2013-01-01 00:00:00\n",
-       "25%                2015-06-01 00:00:00\n",
-       "50%                2017-12-01 00:00:00\n",
-       "75%                2020-05-01 00:00:00\n",
-       "max                2022-11-01 00:00:00\n",
+       "25%                2015-07-24 06:00:00\n",
+       "50%                2018-02-15 00:00:00\n",
+       "75%                2020-09-08 12:00:00\n",
+       "max                2023-04-01 00:00:00\n",
        "Name: date, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset['date'].describe(datetime_is_numeric=True)"
+    "dataset['date'].describe()"
    ]
   },
   {
